--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "@clerk/nextjs": "^5.4.1",
     "@hello-pangea/dnd": "^16.6.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mux/mux-node": "^8.8.0",
+    "@mux/mux-player-react": "^2.9.1",
     "@prisma/client": "^5.19.1",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-table": "^8.20.5",
     "@uploadthing/react": "^6.7.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -25,14 +31,19 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
+    "query-string": "^9.1.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
