--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.13.2",
+    "xendit-node": "^6.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
