--- a/package.json
+++ b/package.json
@@ -26,11 +26,15 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.20.5",
+    "@types/canvas-confetti": "^1.6.4",
     "@uploadthing/react": "^6.7.2",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.7.7",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "framer-motion": "^11.5.4",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "query-string": "^9.1.0",
@@ -51,6 +55,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
