--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
+    "next-themes": "^0.3.0",
     "query-string": "^9.1.0",
     "react": "^18",
     "react-confetti": "^6.1.0",
